--- a/OneProect/work.html
+++ b/OneProect/work.html
@@ -41,7 +41,7 @@
 		 		   </a>
 
 		 		    <a class="photo5 photo" href="#">
-                       <div class="post_logo post__logo">Собственны логотип
+                       <div class="post_logo post__logo">Собственный логотип
 		 		       </div>   
 		 		   </a>
 
