--- a/BrowLove/index.html
+++ b/BrowLove/index.html
@@ -49,7 +49,7 @@
                         <img src="img/main/logo.png" alt="">
                     </div>
                     <header class="header">
-                        <!-- Header -->
+                        <!--Header-->
                         <div class="header__block header__block--burger">
                             <button class="header__burger" type="button" id="navToggle">
                                 <svg class="burger__icon">
@@ -57,10 +57,10 @@
                                 </svg>
                             </button>
                             <nav class="nav__burger" id="nav">
-                                <button class="nav__link" href="#course" data-scroll="#course">Для кого</button>
-                                <button class="nav__link" href="#" data-scroll="#rezult">Результат</button>
-                                <button class="nav__link" href="#" data-scroll="#tariffs">Тарифы</button>
-                                <button class="nav__link" href="#" data-scroll="#works">Фото работ</button>
+                                <button class="nav__link"  data-scroll="#course">Для кого</button>
+                                <button class="nav__link"  data-scroll="#rezult">Результат</button>
+                                <button class="nav__link"  data-scroll="#tariffs">Тарифы</button>
+                                <button class="nav__link"  data-scroll="#works">Фото работ</button>
                             </nav>
                             <button class="header__contact" type="button" id="navtel">
                                 <svg class="contact__icon">
@@ -69,7 +69,7 @@
                             </button>
                             <div class="nav__contact" id="navcontact">
                                 <a href="tel:+7 999 999 99 99">+7 999 999 99 99</a>
-                                <a href="https://www.instagram.com/kalinkinms">Мы в Instagram</a>
+                                <a href="https://www.instagram.com/kalinkinweb">Мы в Instagram</a>
                                 <a href="https://web.whatsapp.com/">Написать в WhatsApp</a>
                             </div>
                         </div>
@@ -79,7 +79,7 @@
                                 <use xlink:href="#ig__icon"></use>
                             </svg>
                         </a>
-                    </header><!-- /Header -->
+                    </header><!--/Header-->
                 </div>
                 <div class="brow">
                     <!-- Brow  -->
