--- a/BrowLove/index.html
+++ b/BrowLove/index.html
@@ -429,7 +429,7 @@
                 </div>
                 <div class="footer__content footer__content--contact">
                     <h3>Контакты</h3>
-                    <a href="tel:+7 999 999 99 99">+7 999 999 99 99</a>
+                    <a href="tel:+71231231212">+7 999 999 99 99</a>
                     <a href="#">Мы в Instagram</a>
                     <a href="#">Написать в WhatsApp</a>
                 </div>
