--- a/BrowLove/index.html
+++ b/BrowLove/index.html
@@ -435,10 +435,10 @@
                 </div>
                 <div class="footer__content footer__content--main">
                     <h3>Меню</h3>
-                    <button>Для кого</button>
-                    <button>Результат</button>
-                    <button>Тарифы</button>
-                    <button>Фото работ</button>
+                    <<button class="nav__link"  data-scroll="#course">Для кого</button>
+                                <button class="nav__link"  data-scroll="#rezult">Результат</button>
+                                <button class="nav__link"  data-scroll="#tariffs">Тарифы</button>
+                                <button class="nav__link"  data-scroll="#works">Фото работ</button>
                 </div>
                 <div>
                     <button class="btn__scroll" data-scroll="#main" id="btnS">
