--- a/BrowLove/index.html
+++ b/BrowLove/index.html
@@ -39,7 +39,7 @@
             </g>
         </symbol>
     </svg>
-    <ь class="main" id="main">
+    <main class="main" id="main">
         
         <div class="container">
             <div class="main__block">
