--- a/BrowLove/index.html
+++ b/BrowLove/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/sweetalert.min.css">
     <!--Fonts-->
-    <link rel="stylesheet" href="fonts/georgia/fonts.css" type="text/css" charset="utf-8">
-    <link rel="stylesheet" href="fonts/Lovelace/fonts.css" type="text/css" charset="utf-8">
+    <link rel="stylesheet" href="fonts/georgia/fonts.css" type="text/css">
+    <link rel="stylesheet" href="fonts/Lovelace/fonts.css" type="text/css">
     <!--Jquery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
@@ -435,10 +435,10 @@
                 </div>
                 <div class="footer__content footer__content--main">
                     <h3>Меню</h3>
-                    <<button class="nav__link"  data-scroll="#course">Для кого</button>
-                                <button class="nav__link"  data-scroll="#rezult">Результат</button>
-                                <button class="nav__link"  data-scroll="#tariffs">Тарифы</button>
-                                <button class="nav__link"  data-scroll="#works">Фото работ</button>
+                    <button class="nav__link"  data-scroll="#course">Для кого</button>
+                    <button class="nav__link"  data-scroll="#rezult">Результат</button>
+                    <button class="nav__link"  data-scroll="#tariffs">Тарифы</button>
+                    <button class="nav__link"  data-scroll="#works">Фото работ</button>
                 </div>
                 <div>
                     <button class="btn__scroll" data-scroll="#main" id="btnS">
