--- a/BrowLove/index.html
+++ b/BrowLove/index.html
@@ -385,15 +385,15 @@
                         <!-- form -->
                         <div class="form__group">
                            <h4>Ваше имя*</h4>
-                           <input class="form__input" type="name" name="name" id="name" required>
+                           <input class="form__input" type="name" name="name" id="name" value="" required>
                         </div>
                         <div class="form__group">
                             <h4>Номер телефона*</h4>
-                            <input class="form__input" type="phont" name="phone" id="phone" required>
+                            <input class="form__input" type="phone" name="phone" id="phone" value="" required>
                         </div>
                         <div class="form__group">
                             <h4>Ваш Е-mail*</h4>
-                            <input class="form__input" type="email" name="email" id="email" required>
+                            <input class="form__input" type="email" name="email" id="email" value="" required>
                         </div>
                         <div class="block_btn">
                             <button type="submit" class="btn " data-modal="#modal_form">
