--- a/BrowLove/index.html
+++ b/BrowLove/index.html
@@ -389,7 +389,7 @@
                         </div>
                         <div class="form__group">
                             <h4>Номер телефона*</h4>
-                            <input class="form__input" type="phone" name="phone" id="phone" value="" required>
+                            <input class="form__input" type="tel" name="tel" id="tel" value="" required>
                         </div>
                         <div class="form__group">
                             <h4>Ваш Е-mail*</h4>
