--- a/BrowLove/index.html
+++ b/BrowLove/index.html
@@ -385,7 +385,7 @@
                         <!-- form -->
                         <div class="form__group">
                            <h4>Ваше имя*</h4>
-                           <input class="form__input" type="text" name="UserName" id="text" value="" required>
+                           <input class="form__input" type="text" name="UserName" id="UserName" value="" required>
                         </div>
                         <div class="form__group">
                             <h4>Номер телефона*</h4>
