--- a/BrowLove/index.html
+++ b/BrowLove/index.html
@@ -72,7 +72,7 @@
                             </button>
                             <div class="nav__contact" id="navcontact">
                                 <a href="tel:+71231231212">+7 999 999 99 99</a>
-                                <a href="https://www.instagram.com/kalinkinweb">Мы в Instagram</a>
+                                <a href="https://www.instagram.com/">Мы в Instagram</a>
                                 <a href="https://web.whatsapp.com/">Написать в WhatsApp</a>
                             </div>
                         </div>
