--- a/ActiveBox/index.html
+++ b/ActiveBox/index.html
@@ -83,10 +83,11 @@
     <!------Intro----->
     <div class="intro" id="intro">
         <div class="container">
-            <div class="intro__inner"></div>
-            <h1 class="intro__title"> Your Favorite One Page Multi Purpose Template</h1>
-            <h2 class="intro__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur commodi, totam quaerat modi odio autem, beatae expedita rerum excepturi saepe?</h2>
-            <a class="btn btn--red" href="#">Кнопка</a>
+            <div class="intro__inner">
+                <h1 class="intro__title"> Your Favorite One Page Multi Purpose Template</h1>
+                <h2 class="intro__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur commodi, totam quaerat modi odio autem, beatae expedita rerum excepturi saepe?</h2>
+                <a class="btn btn--red" href="#">Кнопка</a>
+            </div>
         </div>
     </div>
     <!------features----->
