--- a/Plants/index.html
+++ b/Plants/index.html
@@ -100,7 +100,7 @@
       </div>
 
     </div>
-    <div class="slider-btn">
+    <div class="slider-nav">
       <button class="btn-slider prev">
         <span class="arrow arrow--prew">Previous</span>
         <span>Kaktus Plant</span>
